<resources>
    <string name="app_name">EMore</string>

    <string name="username_or_pwd_error">用户名密码错误</string>
    <string name="net_request_error">请求出错</string>

    <string name="logining">正在登录</string>
    <string name="login_label">登录</string>

    <string name="pull_loading">上拉加载更多</string>
    <string name="loading">正在加载</string>

    <string name="msg_now">刚刚</string>
    <string name="msg_today">今天</string>
    <string name="msg_yesterday">昨天</string>
    <string name="msg_before_yesterday">前天</string>
    <string name="msg_few_minutes_ago">分钟前</string>
    <string name="msg_ten_thousand">万</string>
    <string name="msg_hour">小时前</string>

    <string name="image_load_error">图片加载失败</string>
    <string name="no_more">没有更多内容啦</string>
    <string name="share_news">分享新鲜事...</string>

    <string name="main_search">搜索</string>
    <string name="main_group">分组</string>
    <string name="search_hint">搜索用户或者微博</string>
    <string name="exitapp">退出</string>
    <string name="group_add">新增分组</string>
    <string name="publish">写微博</string>
    <string name="image_count">张</string>
    <string name="refused_to_read_image">你拒绝了图片读取权限，没办法显示图片</string>
    <string name="complete">完成</string>
    <string name="max_image_select_hint">最多只能选择%d张图片</string>
    <string name="unselect_image">你没有选择图片</string>
    <string name="publish_weibo">发布微博</string>
    <string name="wait_comment">正在评论，请等待</string>
    <string name="comment_success">评论成功</string>
    <string name="edit_comment_hint">写评论...</string>
    <string name="share_tips">说说分享心得...</string>
    <string name="repost_success">转发成功</string>
    <string name="weibo_detail_title">微博正文</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="hint">提示</string>
    <string name="aouth_high_hint">需要认证高级权限</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="user_info_page">主页</string>
    <string name="weibo">微博</string>
    <string name="photo">相册</string>
    <string name="filtrate">筛选</string>
    <string name="requesting">正在请求...</string>
    <string name="unfollow">取消关注</string>
    <string name="publish_success">发布成功</string>
    <string name="publish_loading">正在发布,请稍后...</string>
    <string name="publish_backgroud">微博后台发送中</string>
    <string name="publish_fail">微博发送失败</string>
    <string name="publish_success_hint">刷新微博列表就能看见自己发送的微博</string>
    <string name="publish_fail_hint">失败后微博已经自动存入草稿箱</string>
    <string name="replay_success">评论成功</string>
    <string name="user_undefine">用户不存在</string>
    <string name="deleting">正在删除...</string>
    <string name="collecting">正在收藏...</string>
    <string name="uncollecting">正在取消收藏...</string>
    <string name="commenting">正在评论...</string>

    <string-array name="user_headers">
        <item>全部</item>
        <item>原创</item>
        <item>图片</item>
    </string-array>

    <!-- 高级设置 -->
    <string name="title_advanced">高级设置</string>
    <string name="title_ad_common">通用设置</string>
    <string name="title_ad_habit">操作习惯</string>
    <string name="title_rom_adaptive">系统适配</string>

    <!-- 程序设置 -->
    <string name="title_settings">设置</string>
    <string name="settings_account_sumary">%d个授权账号</string>
    <string name="category_def">常规设置</string>
    <string name="settings_basic">基本设置</string>
    <string name="settings_feedback">操作反馈</string>
    <string name="settings_diy">主题设置</string>
    <string name="settings_habit">偏好设置</string>
    <string name="settings_notify">通知中心</string>
    <string name="settings_flow">流量控制</string>
    <string name="settings_offline">离线设置</string>
    <string name="category_advanced">高级设置</string>
    <string name="settings_more_advanced">更多高级设置</string>
    <string name="settings_manage_account">账号管理</string>
    <string name="settings_publish_delay">内容延迟发布</string>
    <string name="settings_publish_delay_summary">延迟5秒发布微博、评论，可点击撤销</string>
    <string name="settings_pic_rotate">旋转照片</string>
    <string name="settings_pic_rotate_summary">拍摄照片分享时将照片旋转90度</string>
    <string name="settings_share_aisen">推荐给好友</string>
    <string name="settings_grade">给我好评</string>
    <string name="settings_inner_browser">使用内置浏览器</string>
    <string name="settings_app_resident">应用常驻内存</string>
    <string name="settings_md_colors">夜间模式</string>
    <string name="settings_theme">主题</string>

    <!-- 通知设置 -->
    <string name="title_notification">通知中心</string>
    <string name="title_notification_enable">开启通知提醒</string>
    <string name="settings_open">开启</string>
    <string name="settings_close">关闭</string>
    <string name="category_general">常规设置</string>
    <string name="settings_dt_notify_interval">消息间隔</string>
    <string name="settings_bother">夜间免打扰</string>
    <string name="settings_bother_summary">凌晨1点-早上8点关闭通知提醒</string>
    <string name="category_notify_type">通知类型</string>
    <string name="settings_status_mention">\@我的微博</string>
    <string name="settings_cmt_mention">\@我的评论</string>
    <string name="settings_followers_notify">粉丝</string>
    <string name="settings_cmt_notify">评论</string>
    <string name="settings_dm_notify">私信</string>
    <string name="category_notify_feedback">提醒方式</string>
    <string name="settings_notify_sound">声音提醒</string>
    <string name="settings_notify_virate">振动提醒</string>
    <string name="settings_notify_led">LED提醒</string>
    <string name="设置">设置</string>
    <string name="setting">设置</string>

    <string name="key_notification_enable">pNotificationEnable</string>
    <string name="key_message_interval">pInterval</string>
    <string name="key_night_close">pNightClose</string>
    <string name="key_status_mention">pStatusMention</string>
    <string name="key_comment_mention">pCommentMention</string>
    <string name="key_setting_follower">pFollower</string>
    <string name="key_setting_comment">pComment</string>
    <string name="key_setting_dm">pDm</string>
    <string name="key_setting_notify_sound">pNotifySound</string>
    <string name="key_setting_notify_vibrate">pNotifyVibrate</string>
    <string name="key_setting_notify_led">pNotifyLED</string>
    <string name="key_setting_theme">pTheme</string>
    <string name="key_setting_browser">pInnerBrowser</string>
    <string name="key_settings_theme">key_settings_theme</string>
    <string name="weibo_mention_count_hint">条@我的微博</string>
    <string name="comment_mention_count_hint">条@我的评论</string>
    <string name="emore_http_scheme">emorehttp</string>
    <string name="user_info_scheme">com.caij.weiyo.userinfo://</string>
    <string name="message">消息</string>
    <string name="image_message_default_text">图片</string>
    <string name="self_weibo_unable_attitude">自己的微博不能点赞哦</string>
    <string name="draft_box">草稿箱</string>
    <string name="delete_success">删除成功</string>
    <string name="settings_dm_attitude">赞</string>
    <string name="key_setting_attitude">key_setting_attitude</string>
    <string name="hot_weibo">热门微博</string>
    <string name="attitude">赞</string>
    <string name="search_hint_text">搜索用户或者微博</string>
    <string name="video_load_error">视频加载出错</string>
    <string name="key_setting_about">key_setting_about</string>
    <string name="comment">评论</string>
    <string name="repost">转发</string>
    <string name="mention_friend">\@朋友</string>
    <string name="exit_hint">退出后将收不到消息提醒</string>
    <string name="change_account_hint">是否切换账号</string>
    <string name="clear_cache_hint">是否清楚缓存</string>
    <string name="network_error">网络出错，请检查网络</string>
    <string name="server_error">服务器出错</string>
    <string name="self_weibo_unable_collect">自己的微博不能收藏哦</string>
    <string name="web_page">网页详情</string>
    <string name="weibo_deleted">微博已经删除</string>
    <string name="emore_service_desc">EMore App后台服务，关闭后将使得一些功能无法正常工作</string>
    <string name="comment_empty">快来发表你的评论吧</string>
    <string name="repost_empty">快来转发精彩内容吧</string>
    <string name="attitude_empty">快来点个赞吧</string>
    <string name="friend_weibo_empty_hint">什么都没有\n去逛逛热门微博吧</string>
    <string name="mention">\@我的</string>
    <string name="new_followers">新粉丝</string>
    <string name="new_comment">条新评论</string>
    <string name="new_dm">条私信</string>
    <string name="new_attitude">新点赞</string>

    <string-array name="txtUnread">
        <item>5分钟</item>
        <item>15分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
    </string-array>

    <string-array name="interval_time_value">
        <item>300000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
    </string-array>
    <string name="default_interval_time">300000</string>

    <string name="server_error_permissions">没有权限或者刷新过于频繁，请稍后再试</string>
    <string name="auth_invalid_hint">身份信息失效, 需要重新认证</string>
    <string name="save_image_error">保存图片失败，请检查内存是否足够</string>
    <string name="media_process_name">:media</string>
    <string name="setting_key_exit">key_exit</string>
    <string name="setting_key_clear_cache">clear_cache</string>
    <string name="text_full_hint">最多只能写这么多东西啦。</string>
    <string name="settings_account">账号管理</string>
    <string name="key_setting_notify">key_setting_notify</string>
    <string name="key_setting_account" >key_setting_account</string>
    <string name="menu_add_account">添加账号</string>
    <string name="is_current_account">当前的账户已经是您选择的账号啦</string>
    <string name="article_detail">文章详情</string>
    <string name="night_mode_change_theme_hint">夜间模式下不能切换主题</string>
    <string name="save_image">保存图片</string>
    <string name="preview_big_image">查看大图</string>
    <string name="home_page">首页</string>
    <string name="group">分组</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="collection">收藏</string>
    <string name="delete">删除</string>
    <string name="block">拉黑</string>
    <string name="clear_conversion">清除会话</string>
    <string name="stranger_dm">陌生人消息</string>
    <string name="reply">回复</string>

</resources>
