<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_ad_common">

        <Preference
            android:key="@string/key_setting_theme" android:title="@string/settings_md_colors"/>

        <Preference
            android:key="@string/key_setting_notify"
            android:title="@string/settings_notify" />

        <Preference
            android:key="pFlow"
            android:title="@string/settings_flow" />


        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_setting_browser"
            android:title="@string/settings_inner_browser" />

    </PreferenceCategory>

    <PreferenceCategory android:title="缓存">

        <Preference
            android:key="@string/setting_key_clear_cache" android:title="清除缓存"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="关于">

        <Preference
            android:key="@string/key_setting_about" android:title="关于EMore"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="账号">

        <Preference
            android:key="@string/key_setting_account"
            android:title="@string/settings_account" />

        <Preference
            android:key="@string/setting_key_exit" android:title="退出"/>

    </PreferenceCategory>

</PreferenceScreen>
