<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/mainMenus" android:orderInCategory="100">

        <item
            android:id="@+id/filter" android:icon="@mipmap/icon_filter"
            android:orderInCategory="2"
            android:title="@string/main_group" app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/publish" android:icon="@mipmap/ic_menu_edit_white"
            android:orderInCategory="2"
            android:title="@string/publish" app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/search" android:icon="@mipmap/icon_search"
            android:orderInCategory="2"
            android:title="@string/main_search" app:showAsAction="ifRoom" />

    </group>

</menu>